--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -2,6 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="catalogueViewModel"
+            type="com.example.safesoftapplication.vM.CatalogueVM" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -12,6 +20,15 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:id="@+id/catalogueProduit">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/catalogueListe"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layoutManager="LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:listitem="@layout/fragment_element_catalogue" />
 
 <!--            <Button-->
 <!--                android:id="@+id/button6"-->
