--- a/app/src/main/res/layout/fragment_details_produit.xml
+++ b/app/src/main/res/layout/fragment_details_produit.xml
@@ -196,8 +196,8 @@
                         android:id="@+id/btn_ajouter_au_panier"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:fabSize="auto"
-                        android:src="@drawable/ic_add_shopping_cart" />
+                        android:src="@drawable/ic_add_shopping_cart"
+                        app:fabSize="auto" />
 
                 </LinearLayout>
             </LinearLayout>
