--- a/app/src/main/res/layout/fragment_element_catalogue.xml
+++ b/app/src/main/res/layout/fragment_element_catalogue.xml
@@ -9,6 +9,9 @@
         <variable
             name="produit"
             type="com.example.safesoftapplication.backend.api.bdLocal.entity.ProduitEntity" />
+        <variable
+            name="clickListener"
+            type="com.example.safesoftapplication.ui.catalogue.ProduitListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,7 +37,8 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="135dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center">
+                android:layout_gravity="center"
+                android:onClick="@{() -> clickListener.onClick(produit)}">
 
                 <ImageView
                     android:id="@+id/imageProduit"
@@ -61,7 +65,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageProduit" />
+                    app:layout_constraintTop_toBottomOf="@+id/imageProduit"
+                    app:prixProduit="@{produit}"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
